@@ -29,4 +29,6 @@
 gnutls_certificate_verification_profiles_t _gnutls_profile_get_id(const char *name) __GNUTLS_PURE__;
 gnutls_sec_param_t _gnutls_profile_to_sec_level(gnutls_certificate_verification_profiles_t profile) __GNUTLS_PURE__;
 
+gnutls_certificate_verification_profiles_t _gnutls_get_system_wide_verification_profile(void);
+
 #endif /* GNUTLS_LIB_PROFILES_H */
